# JMA

./: .gitignore  .gitmodules  JMA.sln  LICENSE  LICENSE.md  README.md
Source/: CMakeLists.txt  JMA-Version.h.in
Source/Client/: JMA-Client.rc  JMA-Client.vcxproj  JMA-Client.vcxproj.filters  Main.cpp
